tests/negative/lexer/char_codepoints.orng
fn main() -> Int {
    let x = 'this character has too many unicode codepoints in it'
    0
}